applications/overlays/hcloud/twitch-channel-points-miner/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twitch-channel-points-miner-ingress
  namespace: automation
  annotations:
    'external-dns.alpha.kubernetes.io/hostname': 'tcpm.macro.network'
    'external-dns.alpha.kubernetes.io/cloudflare-proxied': 'true'
    'traefik.ingress.kubernetes.io/router.entrypoints': 'websecure'
spec:
  tls:
    - hosts:
        - tcpm.macro.network
  rules:
    - host: tcpm.macro.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: twitch-channel-points-miner
                port:
                  number: 5000
